# WaitDontGo

./: .env.example  .replit  ADMIN_SETUP_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT_GUIDE.md  LAUNCH_CHECKLIST.md  PAYMENT_SETUP_GUIDE.md  PRE_LAUNCH_SUMMARY.md  README.md  TRANSLATIONS_GUIDE.md  TRANSLATION_GUIDE.md  check_translations.py  create_db.py  database.py  database_manager.py  db.json  db_operations.py  handlers.py  interactive_bot_test.py  keep_alive.py  main.py  main_backup.py  main_old.py  main_tinydb_backup.py  manual_test_script.py  migration_tools.py  models.py  payment_config.py  payment_system.py  populate_fake_profiles.py  process_manager.py  pyproject.toml  replit.md  requirements.txt  start_bot.py  test_bot_comprehensive.py  test_city_coordinates.py  test_coordinate_integration.py  test_overlap.py  translation_manager.py  (+2 more)
attached_assets/: Pasted-Goal-Make-city-handling-consistent-across-languages-and-inputs-Every-profile-must-store-city-di-1755190835640_1755190835641.txt  Pasted-Got-it-here-s-a-tight-old-vs-new-sanity-check-with-the-must-fixes-for-launch-What-s-clearly-be-1755189485790_1755189485791.txt  main (38)_1754170009297.py  main (51)_1755189095317.py
backups/: alt3r_backup_20250803_001948.json
deployment_configs/: platform_config.json
