[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "openai>=1.98.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "python-telegram-bot==20.8",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "telegram>=0.0.1",
]
